deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tatuscan-api
  namespace: tatuscan
  labels:
    app: tatuscan
    component: api
spec:
  type: ClusterIP
  ports:
  - port: 8040
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: tatuscan
    component: api
---
apiVersion: v1
kind: Service
metadata:
  name: tatuscan-web
  namespace: tatuscan
  labels:
    app: tatuscan
    component: web
spec:
  type: ClusterIP
  ports:
  - port: 8050
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: tatuscan
    component: web
